# job-search

./: README.md
maildrafter/: README.md  email_drafts.xlsx  pyproject.toml
maildrafter/knowledge/: user_preference.txt
maildrafter/src/maildrafter/: crew.py  main.py
maildrafter/src/maildrafter/config/: agents.yaml  tasks.yaml
maildrafter/src/maildrafter/tools/: custom_tool.py  email_drafter.py
