[project]
name = "maildrafter"
version = "0.1.0"
description = "maildrafter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "google-generativeai>=0.8.5",
    "groq>=0.22.0",
    "linkup-sdk>=0.2.4",
]

[project.scripts]
maildrafter = "maildrafter.main:run"
run_crew = "maildrafter.main:run"
train = "maildrafter.main:train"
replay = "maildrafter.main:replay"
test = "maildrafter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
